ДЗ 5 позиционирование все картинки

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,20 +15,17 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a class="link logo" href="WebStudio"
+          <a class="link list logo" href="WebStudio"
             ><span class="web">Web</span>Studio</a
           >
-          <ul class="site-nav list">
+          <ul class="site-nav list link-nav">
             <li class="nav-list-link">
-              <div class="border"></div>
               <a class="link" href="./index.html">Студия</a>
             </li>
             <li class="nav-list-link">
-              <div class="border"></div>
               <a class="link curent" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-list-link">
-              <div class="border"></div>
               <a class="link" href="">Контакты</a>
             </li>
           </ul>
@@ -86,163 +83,197 @@
           <!--Перечень картинок-->
           <ul class="portfolio link list">
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/tehnocr.jpg"
                   alt="Фото1"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Технокряк</h2>
-                  <p>Веб-сайт</p>
-                  <p hidden>
+                <div class="portfolio-position-text">
+                  <p>
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/poster.jpg"
                   alt="Фото2"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">
-                    Постер New Orlean vs Golden Star
-                  </h2>
-                  <p>Дизайн</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p>Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/restorans.jpg"
                   alt="Фото3"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Ресторан Seafood</h2>
-                  <p>Приложение</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/Prime.jpg"
                   alt="Фото4"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Проект Prime</h2>
-                  <p>Маркетинг</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Проект Prime</h2>
+                <p>Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/Boxes.jpg"
                   alt="Фото5"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Проект Boxes</h2>
-                  <p>Приложение</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/inspiration.jpg"
                   alt="Фото6"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">
-                    Inspiration has no Borders
-                  </h2>
-                  <p>Веб-сайт</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">
+                  Inspiration has no Borders
+                </h2>
+                <p>Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/Limed_edition.jpg"
                   alt="Фото7"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Издание Limited Edition</h2>
-                  <p>Дизайн</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/LAB.jpg"
                   alt="Фото8"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Проект LAB</h2>
-                  <p>Маркетинг</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Проект LAB</h2>
+                <p>Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a
-                ><img
+              <div class="portfolio-position">
+                <img
                   src="./images/portfolio/GBusiness.jpg"
                   alt="Фото9"
                   width="370"
                   height="294"
                 />
-                <div class="portfolio-text">
-                  <h2 class="section-title-portf">Growing Business</h2>
-                  <p>Приложение</p>
-                  <p hidden>
-                    это будущее текстовое описание
+                <div class="portfolio-position-text">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
+              </div>
+              <div class="portfolio-text">
+                <h2 class="section-title-portf">Growing Business</h2>
+                <p>Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
