--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a class="link logo" href="WebStudio"
+          <a class="link list logo" href="WebStudio"
             ><span class="web">Web</span>Studio</a
           >
-          <ul class="site-nav list">
+          <ul class="site-nav list link-nav">
             <li class="nav-list-link">
               <a class="link curent" href="./index.html">Студия</a>
             </li>
@@ -123,31 +123,37 @@
           <h2 class="list section-title2">Чем мы занимаемся</h2>
           <ul class="list job-container">
             <li class="job-container-items">
-              <img
-                src="./images/pictures2/deck_p.jpg"
-                alt="Десктопные приложения"
-                width="370"
-                height="294"
-              />
-              <h3 class="section-title-ch">Десктопные приложения</h3>
+              <div class="job-picture">
+                <img
+                  src="./images/pictures2/deck_p.jpg"
+                  alt="Десктопные приложения"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="section-title-ch">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="job-container-items">
-              <img
-                src="./images/pictures2/mobil.jpg"
-                alt="Мобильные приложения"
-                width="370"
-                height="294"
-              />
-              <h3 class="section-title-ch">Мобильные приложения</h3>
+              <div class="job-picture">
+                <img
+                  src="./images/pictures2/mobil.jpg"
+                  alt="Мобильные приложения"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="section-title-ch">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="job-container-items">
-              <img
-                src="./images/pictures2/diz_p.jpg"
-                alt="Дизайнерские решения"
-                width="370"
-                height="294"
-              />
-              <h3 class="section-title-ch">Дизайнерские решения</h3>
+              <div class="job-picture">
+                <img
+                  src="./images/pictures2/diz_p.jpg"
+                  alt="Дизайнерские решения"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="section-title-ch">Дизайнерские решения</h3>
+              </div>
             </li>
           </ul>
         </div>
