Анимация в Портфолио ДЗ 5

--- a/portfolio.html
+++ b/portfolio.html
@@ -283,21 +283,19 @@
     <footer class="logo-footer">
       <div class="container">
         <div class="container-footer-adress">
-          <a class="link logo-text-footer" href="WebStudio"
-            ><span class="link web">Web</span>Studio</a
+          <a class="logo-text-footer" href="WebStudio"
+            ><span class="web">Web</span>Studio</a
           >
           <address class="footer-adress">
-            <a class="link text-footer" href=""
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
+            <a class="text-footer" href="">г. Киев, пр-т Леси Украинки, 26</a>
           </address>
           <address class="footer-adress-mail">
-            <a class="link adress-footer" href="melto:info@example.com"
+            <a class="adress-footer" href="melto:info@example.com"
               >info@example.com</a
             >
           </address>
           <address class="footer-adress-tel">
-            <a class="link adress-footer" href="tel:+380991111111"
+            <a class="adress-footer" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </address>
